# qr-generator

./: .gitignore  Cargo.toml  LICENSE.md  README.md  RESOURCES.md  release.sh
src/: main.rs  qrwindow.rs  showcode.rs  update_checker.rs
src/generators/: generator_email.rs  generator_url.rs  generator_wifi.rs  mod.rs
