[package]
name = "qrgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdk4 = "0.7"
qrcode = "0.12"

serde_json = "1.0"
webbrowser = "0.8"

[dependencies.reqwest]
version = "0.11"
features = ["blocking", "json"]

[dependencies.gtk4]
version = "0.7"
features = ["v4_10"]